# trm-py

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  WHEEL_STRUCTURES.md  build.py  cibuildwheel.toml  conanfile.txt  noxfile.py  pyproject.toml
.github/workflows/: wheels.yml
cibw_scripts/: linux_bb.sh  linux_rw.sh  macosx_bb.sh  macosx_rw.sh
cmake_common/: install_lib.cmake  plplot_install.cmake
include/trm/: array1d.h  array2d.h  buffer2d.h  card.h  constants.h  date.h  ephem.h  format.h  getcomm.h  hitem.h  plot.h  star.h  subs.h  telescope.h
py_subs/: CMakeLists.txt  __init__.py  build.py  conanfile.txt
py_subs/include/: Makefile.am
py_subs/include/trm/: binary.h  formula.h  fraction.h  poly.h
py_subs/lib/: libsubs.dylib
py_subs/lib/cmake/subs/: subsConfig.cmake  subsTargets-release.cmake  subsTargets.cmake
py_subs/src/: CMakeLists.txt  doppler.h  main.cpp  py_doppler.cpp  py_roche.cpp  py_roche.h  py_subs.cpp  test.cxx
py_subs/src/cpp-binary/: CMakeLists.txt  ChangeLog  Makefile.am  README  binaryConfig.cmake.in  configure.ac
py_subs/src/cpp-binary/doc/: Changes.html  Doxyfile.in  Makefile.am  docgen.in  index.html
py_subs/src/cpp-binary/example/: crap200  crap210  figure.pl  fit  junk1  junk2  pgplot.ps  sdss.mol  special.mol
py_subs/src/cpp-binary/include/: Makefile.am
py_subs/src/cpp-binary/src/: Makefile.am  binfo.cc  eclipses.cc  edisc.cc  gyrate.cc  jdotgr.cc  kepler_omega.cc  mr_main_sequence.cc  mr_wd_eggleton.cc  mr_wd_nauenberg.cc  orbital_ang_mom.cc  orbital_omega.cc  orbital_period.cc  orbital_separation.cc  rcirc.cc  rmin.cc  vellipse.cc  wdsolve.cc  zeta_main_sequence.cc  zeta_wd_eggleton.cc  zeta_wd_nauenberg.cc
py_subs/src/cpp-colly/: CMakeLists.txt  Makefile.am  README.rst  collyConfig.cmake.in  configure.ac
py_subs/src/cpp-colly/doc/: Changes.html  Doxyfile.in  Makefile.am  docgen.in
py_subs/src/cpp-colly/include/: Makefile.am
py_subs/src/cpp-colly/include/trm/: colly.h
py_subs/src/cpp-colly/src/: Makefile.am  correct.cc  find_groups.cc  grab.cc  group.cc  mlist.cc  molly.cc  read_molly_head.cc  rejig_molly_head.cc  reorder.cc  skip_bytes.cc  skip_molly_data.cc  write_molly_head.cc
py_subs/src/cpp-lcurve/: .gitignore  CMakeLists.txt  conanfile.txt  lcurveConfig.cmake.in
py_subs/src/cpp-lcurve/include/trm/: lcurve.h
py_subs/src/cpp-lcurve/src/: lroche.cc  picture.cc  visualise.cc
py_subs/src/cpp-mem/: CMakeLists.txt  memConfig.cmake.in
py_subs/src/cpp-mem/include/: CMakeLists.txt
py_subs/src/cpp-mem/include/trm/: memsys.h
py_subs/src/cpp-mem/src/: memsys.cc  stubs.cc
py_subs/src/cpp-roche/: .gitignore  CMakeLists.txt  conanfile.txt  configure.ac  rocheConfig.cmake.in
py_subs/src/cpp-subs/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README.rst  conanfile.txt  configure.ac  steps-to-make.sh  subsConfig.cmake.in  warnings
py_subs/src/cpp-subs/doc/: README  conf.py  genrst.py  index.rst  programs.rst
py_subs/src/cpp-subs/include/trm/: binary_star.h  complex.h  header.h  input.h  position.h  time.h  units.h  vec3.h
py_subs/src/cpp-subs/src/: Makefile.am  amoeba.cc  amoeba_get_psum.cc  array1d.cc  array2d.cc  bicoln.cc  binary.cc  boxcar.cc  brent.cc  bsstep.cc  byte_swap.cc  card.cc  centroid.cc  complex.cc  date.cc  dbrent.cc  endian.cc  ephem.cc  extinct.cc  factln.cc  fasper.cc  fft.cc  filnam.cc  format.cc  formula.cc  fraction.cc  gammln.cc  gammp.cc  gammq.cc  gap.cc  gauss.cc  gaussj.cc  gcf.cc  genetic.cc  getcomm.c  gser.cc  header.cc  hitem.cc  input.cc  jacob.cc  (+45 more)
src/: CMakeLists.txt  build.py  conanfile.txt  doppler.cpp  main.cpp  py_doppler.cpp  py_doppler.h  py_lcurve.cpp  py_lcurve.h  py_roche.cpp  py_subs.cpp  py_subs.h  subs.cpp
trm_py/: __init__.py
trm_py/doppler/: __init__.py  core.py  data.py  derived.py  doppler.cc  grid.py  map.py
trm_py/doppler/scripts/: __init__.py  comdat.py  comdef.py  drlimit.py  grid2map.py  makedata.py  makegrid.py  makemap.py  memit.py  mol2dopp.py  mspruit.py  optgam.py  optscl.py  precover.py  psearch.py  sgrec.py  svd.py  svdfit.py  trtest.py  vrend.py  vrrec.py
trm_py/lcurve/: scripts.py
trm_py/observing/: __init__.py
trm_py/observing/scripts/: eplanner.py  ltphaseii.py  parallactic.py
trm_py/observing/trm/observing/: __init__.py
trm_py/roche/: __init__.py
trm_py/subs/: __init__.py  util.py
trm_py/subs/cpp/: __init__.py
trm_py/subs/plot/: __init__.py
