[project]
name = "trm-py"
version = "0.1.0"
description = "Python package including bindings to the trm-cpp library for precision astronomy"
authors = [
    { name = "Pip Grylls", email = "pipgryllsastro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
eplanner = "trm_py.observing.scripts.eplanner:eplanner"
ltphaseii = "trm_py.observing.scripts.ltphaseii:ltphaseii"
parallactic = "trm_py.observing.scripts.parallactic:parallactic"
levmarq = "trm_py.lcurve.scripts:levmarq"
lprofile = "trm_py.lcurve.scripts:lprofile"
lroche = "trm_py.lcurve.scripts:lroche"
lroches = "trm_py.lcurve.scripts:lroches"
picture = "trm_py.lcurve.scripts:picture"
rotprof = "trm_py.lcurve.scripts:rotprof"
simplex = "trm_py.lcurve.scripts:simplex"
visualise = "trm_py.lcurve.scripts:visualise"


[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "scikit-build-core-conan>=0.6.0",
    "setuptools>=75.6.0",
    "pybind11>=2.13.0",
    "conan>=2.9.1"
]
build-backend = "scikit_build_core_conan.build"

[tool.scikit_build_core_conan]
path = "."
build = "missing"
options = []
settings = []
config = []
generator = "Ninja"
output_folder = "build"

[[tool.scikit-build-core-conan.overrides]]
if.platform-system = "linux"
profile = ".github/conan-profiles/ubuntu-latest"
[[tool.scikit-build-core-conan.overrides]]
if.platform-system = "win32"
profile = ".github/conan-profiles/windows-latest"
[[tool.scikit-build-core-conan.overrides]]
if.platform-system = "darwin"
profile = ".github/conan-profiles/macos-latest"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"

[tool.scikit-build.cmake]
args = [
    "-DCMAKE_TOOLCHAIN_FILE={source_dir}/build/Release/generators/conan_toolchain.cmake",
    "-DPLPLOT_BUILD_TYPE=4",
    "-DPYTHON_SITE_PACKAGES={python_site_dir}",
]

[tool.cibuildwheel]
environment = {CXXFLAGS="-std=c++17", CPPFLAGS="-std=c++17"}#, CC="clang", CXX="clang++"}



