## Process this file with automake to generate Makefile.in
##

nobase_include_HEADERS = trm/subs.h trm/time.h trm/position.h trm/input.h \
trm/date.h trm/star.h trm/binary_star.h trm/ephem.h trm/array1d.h \
trm/array2d.h trm/constants.h trm/hitem.h trm/header.h \
trm/telescope.h trm/plot.h trm/vec3.h trm/buffer2d.h \
trm/getcomm.h trm/complex.h trm/formula.h trm/fraction.h \
trm/units.h trm/format.h trm/poly.h 	
